[package]
name = "zkbob-utils-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.18.0", features = ["rt-tokio","rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
serde = { version = "1.0.130", features = ["derive"] }
tracing = { version = "0.1.29", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.2"
tracing-actix-web = "0.7.0"
tracing-opentelemetry = "0.18.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
config = "0.13.3"
serde-aux = "2.3.0"
tokio = "1.17.0"
ethabi = "17.1.0"
web3 = { git = "https://github.com/r0wdy1/rust-web3", branch = "logs_txhash" }
libzeropool = { git = "https://github.com/zkBob/libzeropool", branch = "multicore-wasm", version = "0.5.6", default-features = false, features = ["in3out127"] }
secp256k1 = "0.21"